# ProxiTap

./: .gitignore  README.md  host_logcat.txt  local.properties  peer_logcat.txt  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RnnoiseProcessor.cpp
app/src/main/java/com/tylerhats/proxitap/: MainActivity.kt
app/src/main/java/com/tylerhats/proxitap/audio/: AudioManagerCompat.kt  CallService.kt  HardwarePttManager.kt  MediaStreamer.kt  RnnoiseProcessor.kt  TestWebRtc.java  TestWebRtc.kt  UdpTunnel.kt  VolumePttAccessibilityService.kt  WebRtcClient.kt
app/src/main/java/com/tylerhats/proxitap/network/: DistanceTracker.kt  HotspotImpl.kt  LocalNetworkManager.kt  NanImpl.kt
app/src/main/java/com/tylerhats/proxitap/signaling/: SignalingClient.kt  SignalingServer.kt
app/src/main/java/com/tylerhats/proxitap/ui/screens/: CallScreen.kt  HomeScreen.kt  LobbyScreen.kt  ScannerScreen.kt  ServerListScreen.kt  SettingsScreen.kt  WebBrowserActivity.kt  WebBrowserScreen.kt
app/src/main/java/com/tylerhats/proxitap/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
